--- a/packages/kbn-api-contracts/tsconfig.json
+++ b/packages/kbn-api-contracts/tsconfig.json
@@ -9,5 +9,8 @@
   "exclude": [
     "target/**/*"
   ],
-  "kbn_references": []
+  "kbn_references": [
+    "@kbn/tooling-log",
+    "@kbn/dev-cli-runner",
+  ]
 }
