--- a/x-pack/platform/plugins/shared/task_manager/tsconfig.json
+++ b/x-pack/platform/plugins/shared/task_manager/tsconfig.json
@@ -43,6 +43,8 @@
     "@kbn/security-plugin-types-server",
     "@kbn/connector-specs",
     "@kbn/es-errors",
+    "@kbn/core-execution-context-server-mocks",
+    "@kbn/core-execution-context-common",
   ],
   "exclude": ["target/**/*"]
 }
