--- a/x-pack/platform/plugins/shared/task_manager/moon.yml
+++ b/x-pack/platform/plugins/shared/task_manager/moon.yml
@@ -51,6 +51,8 @@ dependsOn:
   - '@kbn/security-plugin-types-server'
   - '@kbn/connector-specs'
   - '@kbn/es-errors'
+  - '@kbn/core-execution-context-server-mocks'
+  - '@kbn/core-execution-context-common'
 tags:
   - plugin
   - prod
