--- a/.buildkite/pipelines/on_merge.yml
+++ b/.buildkite/pipelines/on_merge.yml
@@ -70,7 +70,7 @@ steps:
       provider: gcp
       machineType: n2-standard-2
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     timeout_in_minutes: 60
     retry:
@@ -86,7 +86,7 @@ steps:
       provider: gcp
       machineType: n2-standard-16
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     timeout_in_minutes: 60
     retry:
@@ -102,7 +102,7 @@ steps:
       provider: gcp
       machineType: n2-standard-32
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     timeout_in_minutes: 60
     retry:
