Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/streams/moon.yml
+++ b/x-pack/platform/plugins/shared/streams/moon.yml
@@ -78,6 +78,8 @@ dependsOn:
   - '@kbn/alerting-types'
   - '@kbn/core-http-common'
   - '@kbn/scout'
+  - '@kbn/core-lifecycle-server-internal'
+  - '@kbn/core-test-helpers-kbn-server'
   - '@kbn/esql-language'
 tags:
   - plugin
