Add stream navigation to metrics details flyout

--- a/src/platform/packages/shared/kbn-unified-chart-section-viewer/tsconfig.json
+++ b/src/platform/packages/shared/kbn-unified-chart-section-viewer/tsconfig.json
@@ -32,6 +32,9 @@
     "@kbn/presentation-panel-plugin",
     "@kbn/expressions-plugin",
     "@kbn/ebt-tools",
-    "@kbn/es-query"
+    "@kbn/es-query",
+    "@kbn/share-plugin",
+    "@kbn/deeplinks-observability",
+    "@kbn/discover-shared-plugin"
   ]
 }
