--- a/src/platform/packages/shared/kbn-unified-histogram/tsconfig.json
+++ b/src/platform/packages/shared/kbn-unified-histogram/tsconfig.json
@@ -39,5 +39,7 @@
     "@kbn/chart-expressions-common",
     "@kbn/lens-common",
     "@kbn/control-group-renderer",
+    "@kbn/share-plugin",
+    "@kbn/discover-shared-plugin"
   ]
 }
