--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "@kbn/cases-plugin": "link:x-pack/platform/plugins/shared/cases",
     "@kbn/cbor": "link:src/platform/packages/shared/kbn-cbor",
     "@kbn/cell-actions": "link:src/platform/packages/shared/kbn-cell-actions",
+    "@kbn/change-history": "link:x-pack/platform/packages/shared/kbn-change-history",
     "@kbn/chart-expressions-common": "link:src/platform/packages/shared/chart-expressions-common",
     "@kbn/chart-icons": "link:src/platform/packages/shared/kbn-chart-icons",
     "@kbn/charts-plugin": "link:src/platform/plugins/shared/charts",
