--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -182,6 +182,8 @@
       "@kbn/cbor/*": ["src/platform/packages/shared/kbn-cbor/*"],
       "@kbn/cell-actions": ["src/platform/packages/shared/kbn-cell-actions"],
       "@kbn/cell-actions/*": ["src/platform/packages/shared/kbn-cell-actions/*"],
+      "@kbn/change-history": ["x-pack/platform/packages/shared/kbn-change-history"],
+      "@kbn/change-history/*": ["x-pack/platform/packages/shared/kbn-change-history/*"],
       "@kbn/chart-expressions-common": ["src/platform/packages/shared/chart-expressions-common"],
       "@kbn/chart-expressions-common/*": ["src/platform/packages/shared/chart-expressions-common/*"],
       "@kbn/chart-icons": ["src/platform/packages/shared/kbn-chart-icons"],
