[Agent Builder] Run smoke tests dynamically for each model exposed by EIS (#251313)

--- a/x-pack/platform/test/moon.yml
+++ b/x-pack/platform/test/moon.yml
@@ -170,6 +170,7 @@ dependsOn:
   - '@kbn/automatic-import-v2-plugin'
   - '@kbn/connector-specs'
   - '@kbn/ftr-llm-proxy'
+  - '@kbn/dev-cli-runner'
 tags:
   - test-helper
   - package
