Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/packages/shared/kbn-scout/tsconfig.json
+++ b/src/platform/packages/shared/kbn-scout/tsconfig.json
@@ -35,6 +35,7 @@
     "@kbn/streams-schema",
     "@kbn/streamlang",
     "@kbn/axe-config",
-    "@kbn/peggy"
+    "@kbn/peggy",
+    "@kbn/spaces-plugin"
   ]
 }
