Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/packages/shared/kbn-scout/moon.yml
+++ b/src/platform/packages/shared/kbn-scout/moon.yml
@@ -40,6 +40,7 @@ dependsOn:
   - '@kbn/streamlang'
   - '@kbn/axe-config'
   - '@kbn/peggy'
+  - '@kbn/spaces-plugin'
 tags:
   - test-helper
   - package
