Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -52,7 +52,8 @@
     "@kbn/core-saved-objects-api-server-mocks",
     "@kbn/core-user-profile-common",
     "@kbn/core-user-profile-server-mocks",
-    "@kbn/core-user-profile-server"
+    "@kbn/core-user-profile-server",
+    "@kbn/es-mappings"
   ],
   "exclude": ["target/**/*"]
 }
