Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/plugins/shared/workflows_execution_engine/tsconfig.json
+++ b/src/platform/plugins/shared/workflows_execution_engine/tsconfig.json
@@ -29,6 +29,7 @@
     "@kbn/workflows-extensions",
     "@kbn/licensing-plugin",
     "@kbn/usage-api-plugin",
+    "@kbn/server-http-tools",
   ],
   "exclude": [
     "target/**/*"
