Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/plugins/shared/workflows_execution_engine/moon.yml
+++ b/src/platform/plugins/shared/workflows_execution_engine/moon.yml
@@ -34,6 +34,7 @@ dependsOn:
   - '@kbn/workflows-extensions'
   - '@kbn/licensing-plugin'
   - '@kbn/usage-api-plugin'
+  - '@kbn/server-http-tools'
 tags:
   - plugin
   - prod
