--- a/x-pack/solutions/observability/plugins/apm/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/apm/tsconfig.json
@@ -135,7 +135,6 @@
     "@kbn/fields-metadata-plugin",
     "@kbn/deeplinks-analytics",
     "@kbn/apm-sources-access-plugin",
-    "@kbn/presentation-containers",
     "@kbn/object-utils",
     "@kbn/cases-plugin",
     "@kbn/apm-ui-shared",
@@ -152,7 +151,7 @@
     "@kbn/observability-agent-builder-plugin",
     "@kbn/kql",
     "@kbn/slo-plugin",
-    "@kbn/slo-schema",
+    "@kbn/slo-schema"
   ],
   "exclude": ["target/**/*"]
 }
