--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@kbn/tsconfig-base/tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
     "outDir": "target/types"
   },
   "include": [
@@ -16,6 +17,7 @@
     "@kbn/spaces-plugin",
     "@kbn/security-plugin",
     "@kbn/data-plugin",
+    "@kbn/data-streams",
     "@kbn/config-schema",
     "@kbn/core-saved-objects-server",
     "@kbn/core-http-server",
@@ -50,7 +52,8 @@
     "@kbn/core-saved-objects-api-server-mocks",
     "@kbn/core-user-profile-common",
     "@kbn/core-user-profile-server-mocks",
-    "@kbn/core-user-profile-server"
+    "@kbn/core-user-profile-server",
+    "@kbn/es-mappings"
   ],
   "exclude": ["target/**/*"]
 }
