--- a/src/platform/packages/shared/kbn-esql-utils/moon.yml
+++ b/src/platform/packages/shared/kbn-esql-utils/moon.yml
@@ -35,6 +35,10 @@ dependsOn:
   - '@kbn/projects-solutions-groups'
   - '@kbn/index-management-shared-types'
   - '@kbn/licensing-types'
+  - '@kbn/controls-constants'
+  - '@kbn/presentation-containers'
+  - '@kbn/utility-types'
+  - '@kbn/presentation-publishing'
 tags:
   - shared-common
   - package
