--- a/src/platform/packages/shared/kbn-scout/tsconfig.json
+++ b/src/platform/packages/shared/kbn-scout/tsconfig.json
@@ -35,7 +35,6 @@
     "@kbn/streams-schema",
     "@kbn/streamlang",
     "@kbn/axe-config",
-    "@kbn/peggy",
-    "@kbn/spaces-plugin"
+    "@kbn/peggy"
   ]
 }
