--- a/x-pack/platform/plugins/shared/alerting_v2/moon.yml
+++ b/x-pack/platform/plugins/shared/alerting_v2/moon.yml
@@ -24,6 +24,7 @@ dependsOn:
   - '@kbn/spaces-plugin'
   - '@kbn/security-plugin'
   - '@kbn/data-plugin'
+  - '@kbn/data-streams'
   - '@kbn/config-schema'
   - '@kbn/core-saved-objects-server'
   - '@kbn/core-http-server'
@@ -59,6 +60,7 @@ dependsOn:
   - '@kbn/core-user-profile-common'
   - '@kbn/core-user-profile-server-mocks'
   - '@kbn/core-user-profile-server'
+  - '@kbn/es-mappings'
 tags:
   - plugin
   - prod
