Consolidate JSON stringify dependencies (#251890)
Resolves https://github.com/elastic/kibana/issues/233194

Moves all JSON stringification under `@kbn/std` where we already had an
existing stringification utility. This also consolidates the
implementation to a single third-party dependency, instead of 3.

> [!IMPORTANT]
> Please test your UIs! Tests may not catch all regressions! 

<h1 data-pm-slice="0 0 []">Consolidate JSON Stringification
Dependencies</h1><h2>Background</h2><p>The issue <a
href="https://github.com/elastic/kibana/issues/233194">#233194</a>
requests consolidating JSON stringification dependencies. After
analysis:</p>

Dependency | Usages | Purpose | Action
| -- | -- | -- | -- |
json-stable-stringify | 23 files | Deterministic/sorted keys for hashing
| Replace with @kbn/std
json-stringify-safe | 1 file | Handle circular references | Replace with
@kbn/std
json-stringify-pretty-compact | 2 files | Pretty-print with max line
length | Replace with @kbn/std

<h2>Solution: Extend <code>@kbn/std</code> Package</h2><p>Extend the
existing <code>@kbn/std</code> package with new JSON stringify
utilities, backed by <code>safe-stable-stringify</code> which handles
both circular references AND deterministic ordering.</p><p><strong>Why
<code>@kbn/std</code>?</strong></p><ul><li><p>Already has related
utilities: <code>safeJsonParse</code>,
<code>safeJsonStringify</code></p></li><li><p>Widely used core package
for general utilities</p></li><li><p>Avoids creating a new
single-purpose package</p></li></ul><h3>Files to Modify in
<code>@kbn/std</code></h3><pre><code>src/platform/packages/shared/kbn-std/
  ├── package.json              # Add safe-stable-stringify dependency
  ├── index.ts                  # Export new functions
  └── src/
      ├── safe_json_stringify.ts    # Enhance to handle circular refs
      ├── stable_stringify.ts       # NEW: Deterministic stringify
└── pretty_compact_stringify.ts # NEW: Pretty-print with max line
length</code></pre>


----


**Pur

--- a/package.json
+++ b/package.json
@@ -1365,9 +1365,6 @@
     "js-yaml": "4.1.1",
     "jsdom": "20.0.1",
     "json-schema-to-ts": "3.1.1",
-    "json-stable-stringify": "1.0.1",
-    "json-stringify-pretty-compact": "1.2.0",
-    "json-stringify-safe": "5.0.1",
     "jsonwebtoken": "9.0.2",
     "jsts": "1.6.2",
     "kea": "2.6.0",
@@ -1463,6 +1460,7 @@
     "rison-node": "2.1.1",
     "rxjs": "7.8.2",
     "safe-squel": "5.12.5",
+    "safe-stable-stringify": "2.5.0",
     "seedrandom": "3.0.5",
     "semver": "7.7.3",
     "snakecase-keys": "8.0.1",
@@ -1864,7 +1862,6 @@
     "@types/js-yaml": "4.0.9",
     "@types/jsdom": "20.0.1",
     "@types/json-schema": "7.0.15",
-    "@types/json-stable-stringify": "1.0.32",
     "@types/json5": "2.2.0",
     "@types/jsonwebtoken": "9.0.10",
     "@types/license-checker": "25.0.6",
