--- a/renovate.json
+++ b/renovate.json
@@ -939,6 +939,25 @@
       "minimumReleaseAge": "14 days"
     },
     {
+      "groupName": "safe-stable-stringify",
+      "matchDepNames": [
+        "safe-stable-stringify"
+      ],
+      "reviewers": [
+        "team:kibana-core"
+      ],
+      "matchBaseBranches": [
+        "main"
+      ],
+      "labels": [
+        "Team:Core",
+        "release_note:skip",
+        "backport:all-open"
+      ],
+      "enabled": true,
+      "minimumReleaseAge": "14 days"
+    },
+    {
       "groupName": "@elastic/kibana-core dependencies",
       "matchDepNames": [
         "@elastic/request-crypto",
@@ -1624,26 +1643,6 @@
       "enabled": false
     },
     {
-      "groupName": "json-stable-stringify",
-      "matchDepNames": [
-        "json-stable-stringify",
-        "@types/json-stable-stringify"
-      ],
-      "reviewers": [
-        "team:kibana-operations"
-      ],
-      "matchBaseBranches": [
-        "main"
-      ],
-      "labels": [
-        "Team:Operations",
-        "release_note:skip",
-        "backport:all-open"
-      ],
-      "minimumReleaseAge": "14 days",
-      "enabled": true
-    },
-    {
       "groupName": "jsdom",
       "matchDepNames": [
         "jsdom",
@@ -2254,25 +2253,6 @@
       "labels": [
         "Team:Visualizations",
         "backport:all-open"
-      ],
-      "minimumReleaseAge": "14 days",
-      "enabled": true
-    },
-    {
-      "groupName": "json-stringify-pretty-compact",
-      "matchDepNames": [
-        "json-stringify-pretty-compact"
-      ],
-      "reviewers": [
-        "team:kibana-visualizations"
-      ],
-      "matchBaseBranches": [
-        "main"
-      ],
-      "labels": [
-        "Feature:Vega",
-        "Team:Visualizations",
-        "release_note:skip"
       ],
       "minimumReleaseAge": "14 days",
       "enabled": true
@@ -4580,7 +4560,6 @@
         "@types/stats-lite",
         "@types/textarea-caret",
         "email-addresses",
-        "json-stringify-safe",
         "murmurhash",
         "stats-lite",
         "textarea-caret"
