Update mapping/fields for so

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -308,7 +308,12 @@
         "type": "keyword"
       },
       "name": {
-        "type": "text"
+        "type": "text",
+        "fields": { "keyword": { "type": "keyword", "ignore_above": 256 } }
+      },
+      "description": {
+        "type": "text",
+        "fields": { "keyword": { "type": "keyword", "ignore_above": 256 } }
       },
       "updatedAt": {
         "type": "date"
