Introduce notification policy crud APIs and client (#251336)
Resolves https://github.com/elastic/rna-program/issues/84


## Summary


> [!NOTE]
> I've followed the same approach as the rules API / Rules Client /
Rules Saved Object

This PR introduces the Notification Policy saved object, the CRUD APIs
and a client to use from the API and other services.
Added Integration tests on top of uni tests



## Manual testing

```bash
curl --request POST \
  --url http://localhost:5601/internal/alerting/v2/notification_policies \
  --header 'Authorization: Basic <token>' \
  --header 'Content-Type: application/json' \
  --header 'kbn-xsrf: true' \
  --header 'x-elastic-internal-origin: kibana' \
  --data '{  "name": "policy-1",  "description": "desc", "workflow_id": "my-workflow-id"   }'

# note <<ID>>

curl --request GET \
  --url http://localhost:5601/internal/alerting/v2/notification_policies/<ID> \
  --header 'Authorization: Basic <token>' \
  --header 'Content-Type: application/json' \
  --header 'kbn-xsrf: true' \
  --header 'x-elastic-internal-origin: kibana'


curl --request PUT \
  --url http://localhost:5601/internal/alerting/v2/notification_policies/<ID> \
  --header 'Authorization: Basic <token>' \
  --header 'Content-Type: application/json' \
  --header 'kbn-xsrf: true' \
  --header 'x-elastic-internal-origin: kibana' \
  --data '{   "name": "policy-1-updated", "description": "desc", "workflow_id": "my-workflow-id-2", "version": "doc_version"   }'


curl --request DELETE \
  --url http://localhost:5601/internal/alerting/v2/notification_policies/<ID> \
  --header 'Authorization: Basic <token>' \
  --header 'kbn-xsrf: true' \
  --header 'x-elastic-internal-origin: kibana'
```

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -298,6 +298,34 @@
       }
     }
   },
+  "alerting_notification_policy": {
+    "dynamic": false,
+    "properties": {
+      "createdAt": {
+        "type": "date"
+      },
+      "createdBy": {
+        "type": "keyword"
+      },
+      "name": {
+        "type": "text",
+        "fields": { "keyword": { "type": "keyword", "ignore_above": 256 } }
+      },
+      "description": {
+        "type": "text",
+        "fields": { "keyword": { "type": "keyword", "ignore_above": 256 } }
+      },
+      "updatedAt": {
+        "type": "date"
+      },
+      "updatedBy": {
+        "type": "keyword"
+      },
+      "workflow_id": {
+        "type": "keyword"
+      }
+    }
+  },
   "alerting_rule": {
     "dynamic": false,
     "properties": {
