updated CPS privileges to check for cluster privileges. Updated CPS picker component to have default updated only after project routing is saved. Updated cps_manager to use spaces external api instead of internal api

--- a/src/platform/plugins/shared/cps/tsconfig.json
+++ b/src/platform/plugins/shared/cps/tsconfig.json
@@ -16,6 +16,7 @@
     "@kbn/cps-utils",
     "@kbn/es-query",
     "@kbn/i18n-react",
+    "@kbn/spaces-utils",
   ],
   "exclude": [
     "target/**/*",
