--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -108,6 +108,10 @@
       "@kbn/analytics-ftr-helpers-plugin/*": ["src/platform/test/analytics/plugins/analytics_ftr_helpers/*"],
       "@kbn/analytics-plugin-a-plugin": ["src/platform/test/analytics/plugins/analytics_plugin_a"],
       "@kbn/analytics-plugin-a-plugin/*": ["src/platform/test/analytics/plugins/analytics_plugin_a/*"],
+      "@kbn/anonymization-common": ["x-pack/platform/packages/shared/ai-infra/anonymization-common"],
+      "@kbn/anonymization-common/*": ["x-pack/platform/packages/shared/ai-infra/anonymization-common/*"],
+      "@kbn/anonymization-plugin": ["x-pack/platform/plugins/shared/anonymization"],
+      "@kbn/anonymization-plugin/*": ["x-pack/platform/plugins/shared/anonymization/*"],
       "@kbn/apm-config-loader": ["src/platform/packages/private/kbn-apm-config-loader"],
       "@kbn/apm-config-loader/*": ["src/platform/packages/private/kbn-apm-config-loader/*"],
       "@kbn/apm-data-access-plugin": ["x-pack/solutions/observability/plugins/apm_data_access"],
