--- a/package.json
+++ b/package.json
@@ -215,6 +215,8 @@
     "@kbn/analytics-collection-utils": "link:src/platform/packages/private/analytics/utils/analytics_collection_utils",
     "@kbn/analytics-ftr-helpers-plugin": "link:src/platform/test/analytics/plugins/analytics_ftr_helpers",
     "@kbn/analytics-plugin-a-plugin": "link:src/platform/test/analytics/plugins/analytics_plugin_a",
+    "@kbn/anonymization-common": "link:x-pack/platform/packages/shared/ai-infra/anonymization-common",
+    "@kbn/anonymization-plugin": "link:x-pack/platform/plugins/shared/anonymization",
     "@kbn/apm-config-loader": "link:src/platform/packages/private/kbn-apm-config-loader",
     "@kbn/apm-data-access-plugin": "link:x-pack/solutions/observability/plugins/apm_data_access",
     "@kbn/apm-data-view": "link:src/platform/packages/shared/kbn-apm-data-view",
