--- a/x-pack/platform/plugins/shared/inference/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/inference/kibana.jsonc
@@ -14,7 +14,7 @@
     ],
     "requiredBundles": [
     ],
-    "optionalPlugins": [],
+    "optionalPlugins": ["anonymization"],
     "extraPublicDirs": []
   }
 }
