--- a/x-pack/platform/plugins/shared/inference/tsconfig.json
+++ b/x-pack/platform/plugins/shared/inference/tsconfig.json
@@ -44,5 +44,7 @@
     "@kbn/core-ui-settings-common",
     "@kbn/setup-node-env",
     "@kbn/es-errors",
+    "@kbn/anonymization-plugin",
+    "@kbn/anonymization-common",
   ]
 }
