--- a/x-pack/solutions/security/plugins/security_solution/moon.yml
+++ b/x-pack/solutions/security/plugins/security_solution/moon.yml
@@ -275,6 +275,11 @@ dependsOn:
   - '@kbn/babel-register'
   - '@kbn/core-security-common'
   - '@kbn/entity-store'
+  - '@kbn/workflows-ui'
+  - '@kbn/workflows-management-plugin'
+  - '@kbn/workflows'
+  - '@kbn/deeplinks-workflows'
+  - '@kbn/core-rendering-browser'
 tags:
   - plugin
   - prod
