--- a/src/platform/plugins/shared/embeddable/tsconfig.json
+++ b/src/platform/plugins/shared/embeddable/tsconfig.json
@@ -24,6 +24,11 @@
     "@kbn/analytics",
     "@kbn/content-management-utils",
     "@kbn/config-schema",
+    "@kbn/std",
+    "@kbn/licensing-types",
+    "@kbn/licensing-plugin",
+    "@kbn/data-plugin",
+    "@kbn/presentation-util",
   ],
   "exclude": ["target/**/*"]
 }
