--- a/.buildkite/pipelines/pull_request/ftr_bench.yml
+++ b/.buildkite/pipelines/pull_request/ftr_bench.yml
@@ -1,20 +1,10 @@
 steps:
   - command: .buildkite/scripts/steps/ftr_bench.sh
-    label: 'FTR Bench (Standard)'
+    label: 'FTR Bench'
     agents:
       machineType: c4d-standard-16
       diskType: hyperdisk-balanced
       diskSizeGb: 200
     key: ftr_bench
-    timeout_in_minutes: 120
-    soft_fail: true
-
-  - command: .buildkite/scripts/steps/ftr_bench.sh
-    label: 'FTR Bench (Highmem)'
-    agents:
-      machineType: c4d-highmem-16
-      diskType: hyperdisk-balanced
-      diskSizeGb: 200
-    key: ftr_bench-mem
     timeout_in_minutes: 120
     soft_fail: true
