Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
+++ b/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
@@ -101,6 +101,11 @@
     "@kbn/triggers-actions-ui-plugin",
     "@kbn/home-plugin",
     "@kbn/data-plugin",
-    "@kbn/security-plugin"
+    "@kbn/security-plugin",
+    "@kbn/core-elasticsearch-server-mocks",
+    "@kbn/core-data-streams-server",
+    "@kbn/task-manager-plugin",
+    "@kbn/data-streams",
+    "@kbn/es-mappings"
   ]
 }
