Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/agent_builder/moon.yml
+++ b/x-pack/platform/plugins/shared/agent_builder/moon.yml
@@ -106,6 +106,11 @@ dependsOn:
   - '@kbn/home-plugin'
   - '@kbn/data-plugin'
   - '@kbn/security-plugin'
+  - '@kbn/core-elasticsearch-server-mocks'
+  - '@kbn/core-data-streams-server'
+  - '@kbn/task-manager-plugin'
+  - '@kbn/data-streams'
+  - '@kbn/es-mappings'
 tags:
   - plugin
   - prod
