--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "@elastic/eui-theme-borealis": "5.4.0",
     "@elastic/filesaver": "1.1.2",
     "@elastic/kibana-d3-color": "npm:@elastic/kibana-d3-color@2.0.1",
-    "@elastic/monaco-esql": "3.1.16",
+    "@elastic/monaco-esql": "3.1.18",
     "@elastic/node-crypto": "1.2.3",
     "@elastic/numeral": "2.5.1",
     "@elastic/opentelemetry-node": "1.7.0",
@@ -1387,6 +1387,7 @@
     "moment-duration-format": "2.3.2",
     "moment-timezone": "0.6.0",
     "monaco-editor": "0.44.0",
+    "monaco-promql": "1.8.0",
     "monaco-yaml": "5.1.0",
     "murmurhash": "2.0.1",
     "mustache": "4.2.0",
