Add kibana management changes too

--- a/src/platform/plugins/shared/management/kibana.jsonc
+++ b/src/platform/plugins/shared/management/kibana.jsonc
@@ -16,8 +16,10 @@
     "optionalPlugins": [
       "home",
       "serverless",
-      "cloud",
-      "licensing"
+      "cloud"
+    ],
+    "runtimePluginDependencies": [
+      "fleet"
     ],
     "requiredBundles": [
       "kibanaReact",
