--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1297,7 +1297,7 @@
       },
       "logExtractionState": {
         "properties": {
-          "additionalIndexPatterns": {
+          "additionalIndexPattern": {
             "type": "keyword"
           },
           "delay": {
