--- a/packages/kbn-optimizer/limits.yml
+++ b/packages/kbn-optimizer/limits.yml
@@ -32,6 +32,7 @@ pageLoadAssetSize:
   customIntegrations: 11715
   dashboard: 20000
   dashboardEnhanced: 12159
+  dashboardAgent: 5135
   dashboardMarkdown: 4994
   data: 500179
   dataQuality: 11469
