--- a/src/platform/plugins/shared/dashboard/tsconfig.json
+++ b/src/platform/plugins/shared/dashboard/tsconfig.json
@@ -102,8 +102,7 @@
     "@kbn/core-chrome-app-menu-components",
     "@kbn/core-chrome-app-menu",
     "@kbn/test-jest-helpers",
-    "@kbn/agent-builder-common",
-    "@kbn/dashboard-agent-common",
+    "@kbn/scout",
     "@kbn/image-embeddable-plugin"
   ],
   "exclude": ["target/**/*"]
