--- a/src/platform/plugins/shared/dashboard/kibana.jsonc
+++ b/src/platform/plugins/shared/dashboard/kibana.jsonc
@@ -25,8 +25,7 @@
       "uiActions",
       "urlForwarding",
       "presentationUtil",
-      "unifiedSearch",
-      "lens"
+      "unifiedSearch"
     ],
     "optionalPlugins": [
       "home",
@@ -39,9 +38,9 @@
       "serverless",
       "noDataPage",
       "observabilityAIAssistant",
+      "lens",
       "security",
-      "cps",
-      "agentBuilder"
+      "cps"
     ],
     "requiredBundles": [
       "kibanaReact",
