--- a/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
+++ b/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
@@ -20,18 +20,22 @@ project:
 dependsOn:
   - '@kbn/core'
   - '@kbn/logging'
+  - '@kbn/i18n'
   - '@kbn/agent-builder-plugin'
+  - '@kbn/agent-builder-browser'
   - '@kbn/agent-builder-common'
   - '@kbn/agent-builder-server'
   - '@kbn/dashboard-plugin'
+  - '@kbn/dashboard-agent-common'
   - '@kbn/zod'
-  - '@kbn/spaces-plugin'
   - '@kbn/management-settings-ids'
   - '@kbn/lens-embeddable-utils'
   - '@kbn/lens-common-2'
   - '@kbn/share-plugin'
-  - '@kbn/dashboard-markdown'
   - '@kbn/agent-builder-platform-plugin'
+  - '@kbn/react-kibana-mount'
+  - '@kbn/react-kibana-context-render'
+  - '@kbn/deeplinks-analytics'
 tags:
   - plugin
   - prod
@@ -41,6 +45,7 @@ tags:
 fileGroups:
   src:
     - common/**/*
+    - public/**/*
     - server/**/*
     - '!target/**/*'
 tasks:
