--- a/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
+++ b/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
@@ -15,13 +15,14 @@
     "@kbn/dashboard-plugin",
     "@kbn/dashboard-agent-common",
     "@kbn/zod",
-    "@kbn/spaces-plugin",
     "@kbn/management-settings-ids",
     "@kbn/lens-embeddable-utils",
     "@kbn/lens-common-2",
     "@kbn/share-plugin",
-    "@kbn/dashboard-markdown",
     "@kbn/agent-builder-platform-plugin",
+    "@kbn/react-kibana-mount",
+    "@kbn/react-kibana-context-render",
+    "@kbn/deeplinks-analytics"
   ],
   "exclude": ["target/**/*"]
 }
