--- a/.buildkite/pipeline-resource-definitions/kibana-scout-update-metadata.yml
+++ b/.buildkite/pipeline-resource-definitions/kibana-scout-update-metadata.yml
@@ -23,7 +23,7 @@ spec:
         ELASTIC_SLACK_NOTIFICATIONS_ENABLED: 'true'
       allow_rebuilds: true
       # Schedules set BUILDKITE_BRANCH; the step uses it as the PR base. Add a schedule per target branch.
-      branch_configuration: main 9.3 9.2 9.1 8.19
+      branch_configuration: main 9.3 9.2 8.19
       cancel_intermediate_builds: true
       default_branch: main
       repository: elastic/kibana
@@ -57,10 +57,6 @@ spec:
           cronline: 0 0 * * * America/New_York
           message: Daily Scout metadata update
           branch: '9.2'
-        Daily (9.1):
-          cronline: 0 0 * * * America/New_York
-          message: Daily Scout metadata update
-          branch: '9.1'
         Daily (8.19):
           cronline: 0 0 * * * America/New_York
           message: Daily Scout metadata update
