--- a/package.json
+++ b/package.json
@@ -1367,6 +1367,7 @@
     "js-yaml": "4.1.1",
     "jsdom": "20.0.1",
     "json-schema-to-ts": "3.1.1",
+    "json-stable-stringify": "^1.3.0",
     "jsonwebtoken": "9.0.2",
     "jsts": "1.6.2",
     "kea": "2.6.0",
