Changes from node scripts/check_mappings_update --fix

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1300,6 +1300,9 @@
           "additionalIndexPattern": {
             "type": "keyword"
           },
+          "additionalIndexPatterns": {
+            "type": "keyword"
+          },
           "delay": {
             "type": "keyword"
           },
