--- a/x-pack/platform/packages/shared/response-ops/alerts-apis/moon.yml
+++ b/x-pack/platform/packages/shared/response-ops/alerts-apis/moon.yml
@@ -26,6 +26,7 @@ dependsOn:
   - '@kbn/core-notifications-browser-mocks'
   - '@kbn/es-query'
   - '@kbn/react-query'
+  - '@kbn/alerting-types'
 tags:
   - shared-browser
   - package
