--- a/x-pack/platform/packages/shared/response-ops/alerts-apis/tsconfig.json
+++ b/x-pack/platform/packages/shared/response-ops/alerts-apis/tsconfig.json
@@ -22,6 +22,7 @@
     "@kbn/core-http-browser-mocks",
     "@kbn/core-notifications-browser-mocks",
     "@kbn/es-query",
-    "@kbn/react-query"
+    "@kbn/react-query",
+    "@kbn/alerting-types"
   ]
 }
