--- a/.github/workflows/auto-approve-machine-prs.yml
+++ b/.github/workflows/auto-approve-machine-prs.yml
@@ -1,6 +1,5 @@
 # Generic auto-approve for machine-created PRs.
-# Add new (branch prefix, user, optional base ref) rules below as needed.
-# To migrate other auto-approve-*.yml workflows, add their condition here and remove the old workflow.
+# Add new rules to the whitelist in the check step; approval runs when any rule matches.
 on:
   pull_request_target:
     types:
@@ -10,14 +9,33 @@ jobs:
   approve:
     name: Auto-approve machine PR
     runs-on: ubuntu-latest
-    if: |
-      github.event.pull_request.user.login == 'kibanamachine' && (
-        (startsWith(github.event.pull_request.head.ref, 'api_docs') && github.event.pull_request.base.ref == 'main') ||
-        (startsWith(github.event.pull_request.head.ref, 'backport') && github.event.pull_request.base.ref != 'main') ||
-        startsWith(github.event.pull_request.head.ref, 'scout_metadata_update')
-      ) ||
-      (github.event.pull_request.user.login == 'elasticmachine' && startsWith(github.event.pull_request.head.ref, 'update-bundled-packages'))
     permissions:
       pull-requests: write
     steps:
+      - id: check
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
+        with:
+          script: |
+            const user = context.payload.pull_request.user.login;
+            const headRef = context.payload.pull_request.head.ref;
+            const baseRef = context.payload.pull_request.base.ref;
+
+            const whitelist = [
+              // { user: 'kibanamachine', branchPrefix: 'api_docs', baseMatch: /^main$/ },
+              // { user: 'kibanamachine', branchPrefix: 'backport', baseNotMatch: /^main$/ },
+              { user: 'kibanamachine', branchPrefix: 'scout_metadata_update' },
+              // { user: 'elasticmachine', branchPrefix: 'update-bundled-packages' },
+            ];
+
+            const matches = whitelist.some((rule) => {
+              if (rule.user !== user) return false;
+              if (!headRef.startsWith(rule.branchPrefix)) return false;
+              if (rule.baseMatch && !rule.baseMatch.test(baseRef)) return false;
+              if (rule.baseNotMatch && rule.baseNotMatch.test(baseRef)) return false;
+              return true;
+            });
+
+            core.setOutput('should_approve', matches ? 'true' : 'false');
+
       - uses: hmarr/auto-approve-action@f0939ea97e9205ef24d872e76833fa908a770363 # v4.0.0
+        if: steps.check.outputs.should_approve == 'true'
