Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -53,7 +53,8 @@
     "@kbn/core-user-profile-common",
     "@kbn/core-user-profile-server-mocks",
     "@kbn/core-user-profile-server",
-    "@kbn/es-mappings"
+    "@kbn/es-mappings",
+    "@kbn/std"
   ],
   "exclude": ["target/**/*"]
 }
