Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/alerting_v2/moon.yml
+++ b/x-pack/platform/plugins/shared/alerting_v2/moon.yml
@@ -61,6 +61,7 @@ dependsOn:
   - '@kbn/core-user-profile-server-mocks'
   - '@kbn/core-user-profile-server'
   - '@kbn/es-mappings'
+  - '@kbn/std'
 tags:
   - plugin
   - prod
