[Enttiy Store] Add a second version to the saved object

--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1324,6 +1324,9 @@
           "paginationTimestamp": {
             "type": "date"
           },
+          "paginationId": {
+            "type": "keyword"
+          },
           "timeout": {
             "type": "keyword"
           }
