Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/inference/moon.yml
+++ b/x-pack/platform/plugins/shared/inference/moon.yml
@@ -44,6 +44,8 @@ dependsOn:
   - '@kbn/core-ui-settings-common'
   - '@kbn/setup-node-env'
   - '@kbn/es-errors'
+  - '@kbn/anonymization-plugin'
+  - '@kbn/anonymization-common'
 tags:
   - plugin
   - prod
