Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/packages/shared/shared-ux/ai_components/tsconfig.json
+++ b/src/platform/packages/shared/shared-ux/ai_components/tsconfig.json
@@ -11,5 +11,9 @@
     ]
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["target/**/*"]
+  "exclude": ["target/**/*"],
+  "kbn_references": [
+    "@kbn/i18n",
+    "@kbn/react-kibana-context-theme",
+  ]
 }
