--- a/src/core/packages/security/server/tsconfig.json
+++ b/src/core/packages/security/server/tsconfig.json
@@ -10,7 +10,6 @@
     "@kbn/core-security-common",
     "@kbn/core-http-server",
     "@kbn/logging",
-    "@kbn/core-elasticsearch-server",
-    "@kbn/core"
+    "@kbn/core-elasticsearch-server"
   ]
 }
