--- a/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
@@ -45,7 +45,8 @@
     "@kbn/sse-utils-server",
     "@kbn/kibana-utils-plugin",
     "@kbn/server-route-repository-client",
-    "@kbn/apm-types"
+    "@kbn/apm-types",
+    "@kbn/observability-plugin"
   ],
   "exclude": ["target/**/*"]
 }
