--- a/x-pack/solutions/observability/packages/kbn-synthetics-forge/kibana.jsonc
+++ b/x-pack/solutions/observability/packages/kbn-synthetics-forge/kibana.jsonc
@@ -2,7 +2,7 @@
   "type": "shared-common",
   "id": "@kbn/synthetics-forge",
   "owner": "@elastic/obs-ux-management-team",
-  "group": "observability",
+  "group": "platform",
   "visibility": "private",
   "devOnly": true
 }
