--- a/x-pack/platform/plugins/shared/streams/moon.yml
+++ b/x-pack/platform/plugins/shared/streams/moon.yml
@@ -36,7 +36,7 @@ dependsOn:
   - '@kbn/es-types'
   - '@kbn/licensing-plugin'
   - '@kbn/rule-data-utils'
-  - '@kbn/zod/v4'
+  - '@kbn/zod'
   - '@kbn/streams-schema'
   - '@kbn/server-route-repository'
   - '@kbn/es-errors'
