--- a/x-pack/platform/packages/shared/ai-infra/anonymization-common/kibana.jsonc
+++ b/x-pack/platform/packages/shared/ai-infra/anonymization-common/kibana.jsonc
@@ -1,7 +1,7 @@
 {
   "type": "shared-common",
   "id": "@kbn/anonymization-common",
-  "owner": ["@elastic/security-generative-ai"],
+  "owner": ["@elastic/workchat-eng"],
   "group": "platform",
   "visibility": "shared"
 }
