--- a/x-pack/platform/plugins/shared/anonymization/moon.yml
+++ b/x-pack/platform/plugins/shared/anonymization/moon.yml
@@ -6,7 +6,7 @@ $schema: https://moonrepo.dev/schemas/project.json
 id: '@kbn/anonymization-plugin'
 type: unknown
 owners:
-  defaultOwner: '@elastic/security-generative-ai'
+  defaultOwner: '@elastic/workchat-eng'
 toolchain:
   default: node
 language: typescript
@@ -14,7 +14,7 @@ project:
   name: '@kbn/anonymization-plugin'
   description: Moon project for @kbn/anonymization-plugin
   channel: ''
-  owner: '@elastic/security-generative-ai'
+  owner: '@elastic/workchat-eng'
   metadata:
     sourceRoot: x-pack/platform/plugins/shared/anonymization
 dependsOn:
@@ -22,6 +22,8 @@ dependsOn:
   - '@kbn/config-schema'
   - '@kbn/anonymization-common'
   - '@kbn/encrypted-saved-objects-plugin'
+  - '@kbn/features-plugin'
+  - '@kbn/i18n'
 tags:
   - plugin
   - prod
