--- a/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
@@ -46,7 +46,8 @@
     "@kbn/kibana-utils-plugin",
     "@kbn/server-route-repository-client",
     "@kbn/apm-types",
-    "@kbn/observability-plugin"
+    "@kbn/apm-types-shared",
+    "@kbn/observability-utils-server"
   ],
   "exclude": ["target/**/*"]
 }
