Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/observability/plugins/observability_agent_builder/moon.yml
+++ b/x-pack/solutions/observability/plugins/observability_agent_builder/moon.yml
@@ -59,7 +59,8 @@ dependsOn:
   - '@kbn/kibana-utils-plugin'
   - '@kbn/server-route-repository-client'
   - '@kbn/apm-types'
-  - '@kbn/observability-plugin'
+  - '@kbn/apm-types-shared'
+  - '@kbn/observability-utils-server'
 tags:
   - plugin
   - prod
