--- a/.buildkite/pipelines/on_merge.yml
+++ b/.buildkite/pipelines/on_merge.yml
@@ -159,6 +159,7 @@ steps:
       spotZones: us-central1-f,us-central1-c,us-central1-a
     depends_on: check_oas_snapshot
     timeout_in_minutes: 30
+    soft_fail: true
     retry:
       automatic:
         - exit_status: '-1'
